# dev.jakbox.speax

./: LICENSE  README.md  config_manager.go  go.mod  metrics.go  personas.json  push_manager.go  server.config  server.go  timer_manager.go  tts-override.json  tts_manager.go
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/piper/: espeak-ng  libespeak-ng.so.1.52.0.1  libpiper_phonemize.so.1.2.0  piper_phonemize
android/app/src/main/cpp/: CMakeLists.txt  NativeAudioEngine.cpp  VAD.cpp  VAD.h
android/app/src/main/java/com/jakbox/speax/: AlyxVoiceInteractionService.kt  AlyxVoiceInteractionSession.kt  AlyxVoiceInteractionSessionService.kt  AudioEngine.kt  HomeTab.kt  MainActivity.kt  MediaButtonReceiver.kt  NativeAudioEngine.kt  NotificationSounds.kt  SpeaxManager.kt  SpeaxService.kt  SpeaxWebSocket.kt  Theme.kt  ThreadTab.kt
android/app/src/main/res/xml/: voice_interaction_service.xml  voice_interaction_session.xml
public/: app.js  index.html  notes-tool.html  scratchpad-tool.html  search-provider.mjs  search-tool.html  server.js  speax-tool-client.mjs  styles.css  sw.js  timer-tool.html  tool-shared.css  tool-shared.mjs  tools.html
stt/: stt.go
tts/: piper.go  sanitiser.go
tts/piper-service/: Makefile  main.go  piper-service.md
tts/piper-service/api/: health.go  http.go  websocket.go
tts/piper-service/piper/: bridge.cpp  bridge.h  piper.go
tts/piper-service/public/: sample.html
